# ChangeLog for app-emacs/ecb
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/ecb/ChangeLog,v 1.29 2007/07/15 13:26:02 ulm Exp $

  15 Jul 2007; Ulrich Mueller <ulm@gentoo.org> ecb-2.32-r2.ebuild:
  Add informational message to pkg_postinst.

*ecb-2.32-r2 (06 Jul 2007)

  06 Jul 2007; Ulrich Mueller <ulm@gentoo.org> +files/71ecb-gentoo.el,
  ecb-2.32-r1.ebuild, +ecb-2.32-r2.ebuild:
  Use autoload mechanism in sitefile. Emake instead of make in src_compile.
  Dropped ~ppc-macos keyword.

  09 Jan 2007; Christian Faulhammer <opfer@gentoo.org> -ecb-2.21.ebuild,
  -ecb-2.24.ebuild, -ecb-2.27.ebuild, -ecb-2.31.ebuild, -ecb-2.32.ebuild:
  clean up

  13 Aug 2006; Fabian Groffen <grobian@gentoo.org> ecb-2.32-r1.ebuild:
  Marked ~ppc-macos (bug #103166)

  24 May 2006; Michael Hanselmann <hansmi@gentoo.org> ecb-2.32-r1.ebuild:
  Stable on ppc.

  21 May 2006; Simon Stelling <blubb@gentoo.org> ecb-2.32-r1.ebuild:
  stable on amd64

  14 May 2006; Mark Loeser <halcy0n@gentoo.org> ecb-2.32-r1.ebuild:
  Stable on x86; bug #128103

*ecb-2.32-r1 (03 May 2006)

  03 May 2006; Matthew Kennedy <mkennedy@gentoo.org> +ecb-2.32-r1.ebuild:
  Reorder dependencies.

  29 Apr 2006; Tobias Scherbaum <dertobi123@gentoo.org> ecb-2.32.ebuild:
  ppc stable, bug #128103

  26 Apr 2006; Matthew Kennedy <mkennedy@gentoo.org> ecb-2.32.ebuild:
  Install ecb-images correctly; Partially resolves Bug #128103.

*ecb-2.32 (26 Jan 2006)

  26 Jan 2006; Matthew Kennedy <mkennedy@gentoo.org> +ecb-2.32.ebuild:
  New upstream version; Partially resolves Bug #103116.

  16 Jul 2005; Joseph Jezak <josejx@gentoo.org> ecb-2.24.ebuild:
  Marked ppc stable for bug #99246.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> ecb-2.24.ebuild:
  stable on amd64

  23 Feb 2005; Matthew Kennedy <mkennedy@gentoo.org> metadata.xml,
  ecb-2.31.ebuild:
  Fix missing CEDET make variable binding for case of build against separate