@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/ecb
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/ecb/ChangeLog,v 1.29 2007/07/15 13:26:02 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/ecb/ChangeLog,v 1.30 2007/09/23 13:02:24 ulm Exp $
+
+  23 Sep 2007; Ulrich Mueller <ulm@gentoo.org> ecb-2.32-r2.ebuild:
+  Remove dependency on speedbar and eieio since they have been last-rited.
 
   15 Jul 2007; Ulrich Mueller <ulm@gentoo.org> ecb-2.32-r2.ebuild:
   Add informational message to pkg_postinst.
